--- a/style/mystyle.css
+++ b/style/mystyle.css
@@ -1,33 +1,32 @@
 :root {
-    --primary: #814E2B;
-    --primary-focus: #734424;
+  --primary: #814e2b;
+  --primary-focus: #734424;
 }
 
-
-/* fonts */
+/*--fonts--*/
 .font-poppins {
-    font-family: 'Poppinds', sans-serif !important;
+  font-family: "Poppins", sans-serif !important;
 }
 
 .font-archivo {
-    font-family: "Archivo", sans-serif !important;
+  font-family: "Archivo", sans-serif !important;
 }
 
-/* component */
+/*Component*/
 .btn-primary {
-    background-color: var(--primary) !important;
-    border-color: var(--primary) !important;
+  background-color: var(--primary) !important;
+  border-color: var(--primary) !important;
 }
 
 .btn-primary:hover {
-    background-color: var(--primary-focus) !important;
+  background-color: var(--primary-focus) !important;
 }
 
-/* navbar */
+/*--navbar--*/
 .active {
-    color: var(--primary) !important;
+  color: var(--primary) !important;
 }
 
 .nav-link:hover {
-    color: var(--primary) !important;
+  color: var(--primary) !important;
 }
